objects/CQP__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Settings related to the CQP system</description>
    <fields>
        <fullName>CQP_APP_URL__c</fullName>
        <defaultValue>&quot;/CQP/en-US/ExternalServices/ImportOpportunity&quot;</defaultValue>
        <description>The URL of the CQP Application, relative to CQP_Server__c</description>
        <label>CQP APP URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQP_Check_URL__c</fullName>
        <defaultValue>&quot;/CQP/Images/info.png&quot;</defaultValue>
        <label>CQP Check URL</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CQP_Server__c</fullName>
        <defaultValue>&quot;http://quotations.abb.com&quot;</defaultValue>
        <description>Holds URL to CQP server</description>
        <label>CQP Server</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>CQP</label>
</CustomObject>